--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/quicksand": "^5.0.16",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
@@ -15,6 +16,7 @@
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "json-server": "^0.17.4",
+    "quicksand": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
